/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package xts.runtime;

import "google/protobuf/timestamp.proto";

option java_package = "com.google.devtools.mobileharness.platform.android.xts.runtime.proto";
option java_outer_classname = "RuntimeInfoProto";

// A snapshot of xTS Tradefed runtime information.
message XtsTradefedRuntimeInfo {
  // Optional.
  //
  // Empty indicates that the invocation information is unknown (the process has
  // not started or has ended).
  TradefedInvocations invocations = 1;
}

message TradefedInvocations {
  // Required.
  //
  // All running invocations.
  repeated TradefedInvocation invocation = 1;

  // Required.
  google.protobuf.Timestamp timestamp = 2;
}

message TradefedInvocation {
  // Required.
  string device_id = 1;
}
